--- a/npcs/beach.yaml
+++ b/npcs/beach.yaml
@@ -310,7 +310,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions: $characters$ "Does sir/madam have an appointment with His Grace?"; "Scones with your libation, master/madam?"; "Graciouse me!"
+    expressions: $characters$ 
+    - "Does sir/madam have an appointment with His Grace?"
+    - "Scones with your libation, master/madam?"
+    - "Graciouse me!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
