--- a/npcs/beach.yaml
+++ b/npcs/beach.yaml
@@ -310,7 +310,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions: $characters$ 
+    expressions:
     - "Does sir/madam have an appointment with His Grace?"
     - "Scones with your libation, master/madam?"
     - "Graciouse me!"
