--- a/npcs/zirrashka_brrek.yaml
+++ b/npcs/zirrashka_brrek.yaml
@@ -70,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Zirrash'ka Br'rek (Zer-rash-KAH Burrek)
+  name: Zirrash'ka Br'rek
 
   #
   # The NPC artwork.
