--- a/npcs/abrinet_of_dire_dawa_riley.yaml
+++ b/npcs/abrinet_of_dire_dawa_riley.yaml
@@ -80,7 +80,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Abrinet of Dire Dawa ("Riley")
+  name: Abrinet of Dire Dawa (Riley)
 
   #
   # The NPC artwork.
