Refining paragraph css in tight column and bg

--- a/npcs/beach.yaml
+++ b/npcs/beach.yaml
@@ -259,8 +259,8 @@ npc:
       name: The White Gloves
       role: Dabbler
     - id: Black Arts libertarian alchemists
-      name: black arts libertarian alchemists
-      role: Developer
+      name: Black Arts Libertarian Alchemists
+      role: Developer of libations
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -313,7 +313,7 @@ npc:
     expressions:
     - "Does sir/madam have an appointment with His Grace?"
     - "Scones with your libation, master/madam?"
-    - "Graciouse me!"
+    - "Gracious me!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -336,7 +336,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      Hierarchy, tradition and literature are laced like marrow through his thoughts; martial arts; marksmanship.
+      Hierarchy, tradition, and literature are laced like marrow through his thoughts; martial arts; marksmanship.
 
     #
     # Passions:
