--- a/npcs/Class Abilities.yaml
+++ b/npcs/Class Abilities.yaml
@@ -32,15 +32,9 @@
    - - Warlock Abilities:
          - Pact Magic: Spell DC
             Cantrip: 
-            1st Level: 
-            2nd Level: 
-            3rd Level:
-            4th Level:
-            5th Level:
-            6th Level:
-            7th Level:
-            8th Level:
-            9th Level:			 
+            Spells:
+            Spell Slots:
+            Slot Level:			 
          - Eldritch Invocations:
             1:
             2:
@@ -231,7 +225,8 @@
                        within the same radius. Can use this ability x per long rest
        - Lay on Hands: Can touch another creature to heal up to xHP per long rest. Or can 5HP to cure a disease or poison affecting it.
        - Fighting Style: Protection - Can impose disadvantage on attacks again other creatures with 5 feet 
-       - Divine Smite: Melee weapon attacks deal an additional xd8 radiant damage, or xd8 versus undead or fiends 
+       - Divine Smite: when you hit a creature with a melee weapon Attack, you can expend one spell slot to deal radiant damage to the target, in addition to the weapon's damage. The extra damage is 2d8 for a 1st-level spell
+                       slot, plus 1d8 for each Spell Level higher than 1st, to a maximum of 5d8. The damage increases by 1d8 if the target is an Undead or a fiend. 
        - Divine Health: Immune to disease
        - Extra Attack: Can take and extra attack action each turn
        - Aura of Protection: When he or friendly creatures within x feet must make a saving throw, they get a +5 bonus to their roll
