--- a/npcs/Class Abilities.yaml
+++ b/npcs/Class Abilities.yaml
@@ -229,7 +229,7 @@
                        slot, plus 1d8 for each Spell Level higher than 1st, to a maximum of 5d8. The damage increases by 1d8 if the target is an Undead or a fiend. 
        - Divine Health: Immune to disease
        - Extra Attack: Can take and extra attack action each turn
-       - Aura of Protection: When he or friendly creatures within x feet must make a saving throw, they get a +5 bonus to their roll
+       - Aura of Protection: When he or friendly creatures within x feet must make a saving throw, they get a +x bonus to their roll
        - Aura of Courage: He and friendly creatures within x feet can't be frightened while he is conscious
        - Cleansing Touch: x times per long rest can use an action to touch a creature to end one spell on himself or a willing creature he touches       
        - Spellcasting: Spell DC
@@ -362,6 +362,44 @@
 	   
 	   
    - - Shaman 1 Abilities:
+       - Totem Spirit:
+       - Ironwood Skin: While you are not wearing any armor, your Armor Class equals 10 + your Wisdom modifier + your Constitution modifier. You can use a shield and still gain this benefit
+       - Natural Explorer: Favored Terrain - You can choose one type of terrain: arctic, coast, desert, forest, grassland, mountain, or swamp. When you make an Intelligence or Wisdom check related to your favored terrain, your proficiency bonus is doubled if you are using a skill that you are proficient.
+                           While traveling for an hour or more in your favored terrain, you gain the following benefits - 
+                           - Difficult terrain doesn’t slow your group’s travel.
+                           - Your group can’t become lost except by magical means.
+                           - Even when you are engaged in another activity while traveling (such as foraging, navigating, or tracking), you remain alert to danger.
+                           - If you are traveling alone, you can move stealthily at a normal pace.
+                           - When you forage, you find twice as much food as you normally would.
+                           - While tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
+       - Spiritual Magic: Spell DC
+         Cantrips: 
+         1st Level: 
+         2nd Level: 
+         3rd Level: 
+         4th Level: 
+         5th Level:  
+         6th Level:  
+         7th Level:  
+         8th Level: 
+         9th Level:
+       - Spirit Sight: you gain an uncanny sense of when things nearby aren’t as they should be, giving you an edge when you dodge away from danger. You have advantage on Dexterity saving throws against effects that you can see,
+                       such as traps and spells. To gain this benefit, you can’t be blinded, deafened, or incapacitated
+       - Primal Protector: you can connect with animal spirits and improve the demeanor of a creature with the beast type that you can see. Using your totem, you can use your action to attempt to make a target creature
+                           indifferent about creatures of your choice that it is hostile toward. Each beast creature that can see you within 30 feet of you must make a Wisdom saving throw. If the creature fails its saving throw,
+                           it is charmed by you for 1 minute or until it takes damage. While it is charmed by you, it is friendly to you and other creatures you designate. You are able to perform this twice per short or long rest
+       - Spiritual Connection: your spiritual connection with your Spirit World grows and it blesses you with mental fortitude. A spiritual aura surrounds you, and grants you and any allies within 10 feet advantage on
+                               Constitution and Wisdom saving throws 
+       - Bounty of Life: you can choose to drain the life force from a creature. When you hit a creature with a melee attack, the target must succeed on a Constitution saving throw versus your spell save DC; on a failed save, you
+                         gain temporary hit points equal to the damage caused to the creature. You can use this ability once per round
+       - Spiritual Whisper: you are bestowed a magical secret as if it were a whisper into your mind. Choose one 6th- level spell from the Druid spell list as this whisper. You can cast your secret spell once without expending a
+                            spell slot. You must finish a long rest before you can do so again. At higher levels, you gain more druid spells of your choice that can be cast in this way; one 7th- level spell at 13th level, one 8th-level
+                            spell at 15th level, and one 9th-level spell at 17th level. You regain all uses of your Spiritual whisper when you finish a long rest. 
+       - Eternal Favor: the primal magic that you wield requires you to age very slowly. In order to complete tasks in the natural world, every 10 years that pass, your body ages only 1 year
+       - Spiritual Warrior: you embody the spiritual power of the world and it infuses you with vigor and insight. Your Wisdom score increases by 4. Your maximum for this score is now 24       
+   
+   
+   - - Shaman 2 Abilities:
        - Spellcasting: Spell DC
          Cantrips: 
          1st Level: 
@@ -408,7 +446,7 @@
                        aren’t consumed by a spell.
 
 
-   - - Shaman 2 Abilities:
+   - - Shaman 3 Abilities:
        - Spellcasting: Spell DC
          Cantrips: 
          1st Level: 
