--- a/npcs/Race Abilities.yaml
+++ b/npcs/Race Abilities.yaml
@@ -194,17 +194,6 @@
        - Art of the Word: You are proficient in the Persuasion skill
        - Bewitching Words: Can cast Mass Charm once per long rest using Charisma as spellcasting DC
 	   
-   - - Steel Defender Abilities:
-        - Proficiencies: Proficiency Bonus +6 - Atheltics +2 plus PB, Perception +0 plus PBx2, Dex Saves +3 plus PB, Con Saves +2 plus PB
-        - Immunities: Immune to Poison and Psychic Damage. Immune to Poison, Charmed and Exhaustion. Resistant to Fire
-        - Darkvision: 60ft. Passive Perception 22
-        - Vigilant: Can't be surprised
-        - Force Empowered Rend: Using a +8 Spellcasting modifier to hit one target within 5ft. Deals 1d8+6 force damage.
-        - Repair: (3/Day) Restore 2d8+6 hit points to itself or another object or construct within 5ft
-        - Extra Attack: Can take a second attack action each turn
-        - Deflect Attack: Imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it provided that attack roll is against a creature other than it,
-                          The attacker takes 1d4+8 force damage. 
-        - Intimidate: It is an imposing sight and all those seeing it for the first time mus make a DC 12 Wisdom save or become firghtened for 1 round 
 		
    - - Satyr Abilities:
        - Fey: Your creature type is fey, rather than humanoid           
@@ -408,3 +397,27 @@
         - Deflect Attack: Imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it provided that attack roll is against a creature other than it,
                           The attacker takes 1d4+8 force damage. 
         - Intimidate: It is an imposing sight and all those seeing it for the first time must make a DC 12 Wisdom save or become firghtened for 1 round
+        
+        
+   - - Revenant Abilities:
+        - Relentless Nature: 
+          - Regains 1HP at the beginning of each turn if below half maximum HP
+          - If he dies, he returns to life 24hrs after death. If his body is destroyed he will reform within 1 mile of where he was killed. Equipment destroyed is not regained     
+          - Knows the distance and direction between him and the creature involved in his goal unless they are on another plane
+          
+          
+   - - Kor Abilities:
+       - Kor Climbing: You are proficient in both the Athletics and Acrobatics skills.
+       - Lucky: When you roll a 1 on the d20 for an attack roll, ability check, or saving throw, you can reroll the die and must use the new roll.
+       - Brave: You have advantage on saving throws against being frightened.
+       
+       
+   - - Kalashtar Abilities:
+       - Dual Mind: When you make a Wisdom saving throw, you can use your reaction to gain advantage on the roll. You can use this trait immediately before or after you roll, but before any of the roll's effects occur.
+       - Mental Discipline: You have resistance to psychic damage
+       - Mind Link: You can speak telepathically to any creature you can see within 60 feet of you. You don’t need to share a language with the creature for it to understand your telepathic messages, but the creature must be
+                    able to understand at least one language or be telepathic itself. As a bonus action when you’re speaking telepathically to a creature, you can give that creature the ability to speak telepathically to you
+                    until the start of your next turn. To use this ability, the creature must be within 60 feet of you and be able to see you.
+       - Psychic Glamour: Choose one of the following skills - Insight, Intimidation, Performance, or Persuasion. You have advantage on all ability checks you make with that skill
+       - Severed from Dreams: Kalashtar sleep, but they don’t connect to the plane of dreams as other creatures do. Instead, their minds draw from the memories of their otherworldly spirit while they sleep. As such, you are
+                              immune to magical spells and effects that require you to dream, like the Dream spell, but not to spells and effects that put you to sleep, like the Sleep spell
