Template iteration 1 complete

--- a/npcs/albrecht_mukht.yaml
+++ b/npcs/albrecht_mukht.yaml
@@ -396,7 +396,9 @@ npc:
     - Survival
     - Intimidation
     skills:
-    - Roofing; Woodworking; Masonry; Intimidation
+    - Roofing
+    - Woodworking
+    - Masonry
     special-abilities: 
     - title: Relentless Endurance
       description: If Albrecht is reduced to 0 hitpoints but not killed outright, he drops to 1 hitpoint instead. He can only use this feature once per long rest.
