--- a/npcs/Class Abilities.yaml
+++ b/npcs/Class Abilities.yaml
@@ -519,3 +519,39 @@
                        solid objects. If you end your turn in an object, you are dealt 1d10 force damage. You may rematerialize in your present location as a bonus action. If you choose to maintain this form until the duration 
                        expires and you are in a location occupied by a creature or solid object, you are shunted to the nearest unoccupied space and take force damage equal to twice the number of feet you are moved as a result. 
                        Once you use this feature, you must finish a long rest before you can use it again.
+                       
+                       
+   - - Doctor Abilities:
+       - Medical Training: Due to your meticulous study into the healing arts you can use your Intelligence modifier instead of your Wisdom modifier for Medicine checks. In addition your proficiency bonus is doubled for any
+                           Medicine checks that you make. 
+       - Doctors Bag: you gain access to a number of special supplies due to your medical training. These supplies include things like bandages, syringes, medicinal powders, and healing salves. You keep these in a storage
+                      container of your choice such as a bag, a series of pouches, or even a trunk. As long as you have access to your Doctor's Bag you may use an action to stabilize a creature that has 0 hit points, without
+                      needing to make a Medicine check.
+       - First Aid: you can apply basic first aid to an adjacent creature you can touch. As a bonus action you heal the target for 1d4 hit points. This increases by 1d4 when you reach 5th level (2d4), 11th level (3d4), and 17th
+                    level (4d4). You can use this feature a number of times equal to your Intelligence modifier + 1. You regain any expended uses when you finish a Short Rest.
+       - Second Opinion: you have become accustomed not only to combat, but to coordinating with other healers. Whenever an ally within 20ft of you uses a healing ability, spell, or item, you can use your reaction to increase
+                         the amount healed to a single target by half, rounded up. Your ally must be able to see or hear you.
+       - Patch Up: you have learned that there is always another fight around the corner, and it's best to be ready for it. Select up to 6 willing creatures that you can touch. You spend the next 10 minutes quickly stitching up
+                   any open wounds and applying painkillers where needed, whatever it takes to get them to the next battle. This cures them of any non-magical ailments and restores a number of hit points equal to half of their
+                   maximum rounded up. You can use this feature a number of times equal to your Intelligence modifier divided by two (a minimum of once). You regain any expended uses when you finish a Long Rest.
+       - Diagnosis: you have learned to treat hostile scenarios as just another day at the office. As an action you study a living creature and gain vital insight towards its physical state. You learn one of the targets
+                    following statistics - Damage Vulnerabilities, Damage Resistances, Damage Immunities, Highest Saving Throw, Lowest Saving Throw, or whether or not the creature is below half its health. You can use this
+                    feature a number of times equal to your Intelligence modifier (a minimum of once). You regain expended uses when you finish a Short Rest.
+       - Paramedic: you have become experienced at reaching the injured without taking damage. When you use your action to disengage you may also double your movement speed until the end of your turn
+       - Vaccination: you have spent countless hours attempting to aid those suffering from disease and have developed a number of treatments. As an action you can cure a target of a single disease afflicting them. Alternatively,
+                      you can inoculate a target against disease for the next 24 hours. In addition, due to exposure from numerous patients the doctor gains immunity to all disease.
+       - Vitality Boost: you have become an expert at healing at a moment’s notice. As an bonus action you can heal an adjacent creature you can touch for 4d6 hit points. This increases by 2d6 when you reach 15th level (6d6).
+                         You can use this feature a number of times equal to your Intelligence modifier + 1. You regain any expended uses when you finish a Short Rest.
+       - Reanimation: You provide life saving aid to a creature that has died within the last 10 minutes and return them to life. The creature returns to life with 1 hit point. This procedure can't return to life a creature that
+                      has died of old age, nor can it restore any missing body parts. You cannot use this feature again until you have completed a short rest.
+       - Experianced Healer: you are unlikely to fail at common medical tasks. Whenever you make a Medicine check you can treat a d20 roll of 9 or lower as a 10.
+       - Sedate: you have managed to create sedatives using standard supplies. As an action you can inject a willing creature with a sedative that will cause them to go unconscious for 1d4 hours. You can also attempt to inject
+                 an unwilling creature for the same effect. An unwilling target must be below one quarter of its maximum hit points for this ability to take effect. They must then succeed a Constitution saving throw or
+                 immediately fall unconscious for 1d4 hours.
+       - Practiced Hands: you have performed the same procedures countless times. Whenenever you use a healing ability, item, or other effect that involves a die roll you can add an additional healing die of the same type to the
+                          end result, even if the result would otherwise be maximized.
+       - Experimental Procedure: you recognize that the limitations of the mortal body are simply defects waiting to be corrected. You target a specific stat; Strength, Dexterity, Constitution, Intelligence, Wisdom, or Charisma
+                                 and attempt to improve it. This may involve replacing organs, changing appearance, or altering brain chemistry. To be successful you must succeed on a DC25 Medicine check or the procedure fails.
+                                 On a success the target gains a permanent +1 bonus to the targeted ability score. You may not attempt this procedure on the same target more than 3 times, regardless of success or failure. Due
+                                 to your skills a failure does not inflict any negative effects on the target, but the target receives no benefits. The procedure takes eight hours from start to finish, and cannot be paused or
+                                 interrupted. The targeted creature takes five days to recover, and remains incapacitated. 
