--- a/npcs/Class Abilities.yaml
+++ b/npcs/Class Abilities.yaml
@@ -266,21 +266,25 @@
 
 
    - - Blood Hunter Abilities:
-       - Hunter's Bane: You have advantage on Wisdom (Survival) checks to track fey, fiends, or undead, as well as on Intelligence ability checks to recall information about them. The Hunter’s Bane also empowers your body to 
-                        control and shape hemocraft magic, using your own blood and life essence to fuel your abilities. Some of your features require your target to make a saving throw to resist the feature’s effects. The saving 
-                        throw DC is calculated as follows - Hemocraft save DC
+       - Hunters Bane: You have advantage on Wisdom (Survival) checks to track fey, fiends, or undead, as well as on Intelligence ability checks to recall information about them. The Hunter’s Bane also empowers your body to 
+                       control and shape hemocraft magic, using your own blood and life essence to fuel your abilities. Some of your features require your target to make a saving throw to resist the feature’s effects. 
+                       - Hemocraft save DC 14
        - Blood Maledict: you gain the ability to channel, and sometimes sacrifice, a part of your vital essence to curse and manipulate creatures through hemocraft magic. You gain one Blood Curse of your choice. You learn one 
                          additional blood curse of your choice, and you can choose one of the blood curses you know and replace it with another blood curse, at 6th, 10th, 14th, and 18th level. When you use your Blood Maledict, 
                          you choose which curse to invoke. While invoking a blood curse, but before it affects the target, you can choose to amplify the curse by losing a number of hit points equal to one roll of your hemocraft 
                          die, as shown in the Hemocraft Die column of the Blood Hunter table. An amplified curse gains an additional effect, noted in the curse’s description. Creatures that do not have blood in their bodies are 
                          immune to blood curses, unless you have amplified the curse. You can use this feature once. Beginning at 6th level, you can use your Blood Maledict feature twice, at 13th level you can use it three times 
                          between rests, and at 17th level, you can use it four times between rests. You regain all expended uses when you finish a short or long rest.
-       - Figthing Style:
-       - Crimson Rite: you learn to invoke a rite of hemocraft within your weapon at the cost of your own vitality. Choose one rite from the Primal Rites list below to learn. As a bonus action, you activate a crimson rite on a 
+                         Hemocraft Die: 
+                         Blood Curses Known: 
+                         Blood Curses: 
+       - Figthing Style: Two Weapon Fighting
+       - Crimson Rite: you learn to invoke a rite of hemocraft within your weapon at the cost of your own vitality. Choose one rite from the Primal Rites list to learn. As a bonus action, you activate a crimson rite on a 
                        single weapon with the elemental energy of a known rite of your choice that lasts until you finish a short or long rest, or if you aren’t holding the weapon at the end of your turn. When you activate a rite,
                        you lose a number of hit points equal to one roll of your hemocraft die, as shown in the Hemocraft Die column of the Blood Hunter table. While active, attacks from this weapon deal an additional 1d4 damage 
                        of the chosen rite’s type. This damage is magical, and increases as you gain levels as a blood hunter, as shown in the Hemocraft Die column of the Blood Hunter table. A weapon can only hold a single active 
                        rite at a time. You learn an additional Primal Rite of your choice at 7th level, and choose an Esoteric Rite to learn at 14th level.
+                       Primal Rites Known: 
        - Extra Attack: you can attack twice, instead of once, whenever you take the Attack action
        - Brand of Castigation: whenever you damage a creature with your Crimson Rite feature, you can choose to sear an arcane brand of hemocraft magic into it (requires no action). You always know the direction to the branded 
                                creature, and each time the branded creature deals damage to you or a creature you can see within 5 feet of you, the branded creature suffers psychic damage equal to your Intelligence modifier 
