--- a/npcs/Race Abilities.yaml
+++ b/npcs/Race Abilities.yaml
@@ -21,8 +21,9 @@
        - Kefnets Blessing: Can add half her proficiency bonus, rounded down, to any Intelligence check she makes that doesn’t already include herr proficiency bonus 	  
 	  
    - - Dragonborn Abilities:
-       - Breathe Weapon: Can exhale fire in a 15 foot cone with a DC 13. A creature takes 2d6 damage on a failed save, and half as much damage on a successful one.           
-       - Damage Resistance: Resistance to Fire 	
+       - Breathe Weapon: Can exhale x in a 15 foot cone with a DC x. A creature takes 2d6 damage on a failed save, and half as much damage on a successful one. The damage increases to 3d6 at 6th level, 4d6 at 11th level, and
+                         5d6 at 16th level.           
+       - Damage Resistance: Resistance to x 	
 
    - - Half-Orc Abilities:
        - Darkvision: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray..           
@@ -138,8 +139,7 @@
    - - Half-Elf Abilities:
         - Fey Ancestry: Advantage on saving throws againts charm and immune to sleep magic
         - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
-        - Mask of the Wild: Can attempt to hide even when only lightly obscured by natural phenomenon 
-        - Wood Elf Magic: Once per long rest can cast Guidance, Longstrider and Pass Without Trace without expending a spell slot. Spell DC 
+        - Mask of the Wild: Can attempt to hide even when only lightly obscured by natural phenomenon  
 
    - - Viashino Abilities:
         - Bite: can make an unarmed strike for 1d4+4 piercing damage
@@ -421,3 +421,15 @@
        - Psychic Glamour: Choose one of the following skills - Insight, Intimidation, Performance, or Persuasion. You have advantage on all ability checks you make with that skill
        - Severed from Dreams: Kalashtar sleep, but they don’t connect to the plane of dreams as other creatures do. Instead, their minds draw from the memories of their otherworldly spirit while they sleep. As such, you are
                               immune to magical spells and effects that require you to dream, like the Dream spell, but not to spells and effects that put you to sleep, like the Sleep spell
+                              
+                              
+   - - Hexblood Abilities:
+       - Darkvision: You can see in dim light within 60 feet of you as if it were bright light and in darkness as if it were dim light.
+       - Fey Resilience: You have advantage on saving throws you make to avoid or end the charmed condition on yourself.
+       - Hex Magic: You can cast the Disguise Self and Hex spells with this trait. Intelligence, Wisdom, or Charisma is your spellcasting ability for these spells (choose when you gain this lineage). Once you cast either of these
+                    spells with this trait, you can’t cast that spell with it again until you finish a long rest. You can also cast these spells using any spells slots you have.
+       - Magic Token: As an action, you can harmlessly pull out one of your nails, a tooth, or a lock of hair. This token is imbued with magic until you finish a long rest. While the token is imbued in this way, you can use an
+                      action to send a telepathic message to the creature holding or carrying the token, as long as you are on the same plane of existence and are within 10 miles of it. The message can contain up to twenty-five
+                      words. In addition, while you are within 10 miles of the token, you can use an action to enter a trance for 1 minute, during which you can see and hear from the token as if you were located where it is.
+                      While you are using your senses at the token’s location, you are blinded and deafened in regard to your own surroundings. Afterward, the token is harmlessly destroyed. Once you create a token using this
+                      feature, you can’t do so again until you finish a long rest, at which point your missing part regrows
