--- a/npcs/Race Abilities.yaml
+++ b/npcs/Race Abilities.yaml
@@ -433,3 +433,33 @@
                       words. In addition, while you are within 10 miles of the token, you can use an action to enter a trance for 1 minute, during which you can see and hear from the token as if you were located where it is.
                       While you are using your senses at the token’s location, you are blinded and deafened in regard to your own surroundings. Afterward, the token is harmlessly destroyed. Once you create a token using this
                       feature, you can’t do so again until you finish a long rest, at which point your missing part regrows
+                      
+                      
+   - - Half-Ogre Abilities:
+        - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
+        - Strong and Angry: Due to your giant size and insane strength, using great weapons tends to be really easy for you. You gain proficiency with the greataxe and the maul.
+        - Relentless Power: Nothing can stop your imense strength. When you roll a critical hit with a melee weapon, you can roll one of the weapon dice again and add it to the total.
+        - Unstoppable Destruction: Your size and strength are unmatched. If you hit an enemy with an attack with a two-handed melee weapon, you can use your bonus action to attack one adjacent enemy within 5ft from you and the
+                                   enemy you first hit with your two-handed melee weapon, though the second attack is rolled with disadvantage.
+        - Frightful Appearance: Due to your sheer size, you would put the braves to run. You gain proficiency in the Intimidation skill.
+        - Bloodrage: Your blood becomes filled with your anger. Once per long rest, with a bonus action, you may raise your Strength score by 4 for 1 minute. When the Bloodrage ceases, you get a minus 4 in your Intelligence
+                     score untill you finish a short or long rest.
+                     
+                     
+   - - Firenewt Abilities:
+        - Amphibious: You can breathe in smoke, air, and water, as well as ingest lava and other flammable liquids.
+        - Spit Fire: As an action, you can spit a molt of fire at a creature within 10 feet of you. The creature must make a Dexterity saving throw with a DC equal to 8 + your Constitution modifier + your proficiency bonus. A
+                     creature takes 2d8 fire damage on a failed save, and half as much damage on a successful one. The damage increases to 3d8 at 6th level, 4d8 at 11th level, and 5d8 at 16th level. You cannot spit fire again
+                     until you finish a short or long rest or take time to ingest at least a flask of some flammable liquid like lantern oil.
+        - Fireborne: You are resistant to fire damage.
+        - Heat Seeker: If you spend a week without a source of moist heat, you have disadvantage on all ability checks and attack rolls until you spend a short or long rest with a source of moist heat.
+        - Explosive Desires: You are proficient with either alchemist’s tools or smith’s tools.
+        - Critical Flame: When you score a critical hit with a melee weapon attack, your weapon ignites in flame and you can roll one of the weapon’s damage dice one additional time and add it to the extra damage of the critical
+                          hit. This extra damage is fire damage regardless of the weapon damage type
+                          
+                          
+   - - Naga Abilities:
+        - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
+        - Keen Senses: You are proficient in the Perception skill
+        - Poison Resistance: You have resistance to poison damage, and you have advantage on saving throws against becoming poisoned.
+        - Herbalist: The foliage of the jungle has given you knowledge in herbs and their preparation. You are proficient in the Medicine skill.
